<resources>
    <string name="app_name">NavExample</string>
    <string name="message_menu">Message</string>
    <string name="person_menu">Person</string>
    <string name="communicate_menu">Communicate</string>
    <string name="share_menu">Share</string>
    <string name="send_menu">Send</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="message_fragments">Message Fragments</string>


</resources>